k8s/network-policies/allow-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx
  namespace: microservices

spec:
  # These are the application Pods NGINX may reach.
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - employee
          - department
          - organization
          - admin

  policyTypes:
    - Ingress

  ingress:
    - from:
        # Source must be in the ingress-nginx namespace.
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

          # Source must also be the NGINX controller Pod.
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/component: controller

      ports:
        - protocol: TCP
          port: 8080
